style hero section and gallery

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Mountain Travel</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -24,6 +25,52 @@
       <h3>Travel Tours Around The World</h3>
       <a href="#" class="btn">Contact Us</a>
     </div>
+  </section>
+  <section class="destinations">
+    <h3 class="title">Some of our destinations:</h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+      Aliquam quaerat velit voluptatum dicta at, consequatur facilis sint, 
+      omnis exercitationem vero hic unde possimus dolorem repellendus modi dolor repellat voluptates placeat?
+    </p>
+    <hr>
+    <ul class="grid">
+      <li class="small" style="background-image: url(assets/img/mountain1.jpg);"></li>
+      <li class="large" style="background-image: url(assets/img/mountain2.jpg);"></li>
+      <li class="large" style="background-image: url(assets/img/mountain3.jpg);"></li>
+      <li class="small" style="background-image: url(assets/img/mountain4.jpg);"></li>
+    </ul>
+
+  </section>
+  <section class="packages">
+    <h3 class="title">Tour Packages</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, obcaecati. Soluta perspiciatis, ipsam illum blanditiis odio in placeat cumque ad voluptatum consequatur ullam tenetur ab ut libero hic harum inventore.
+
+    </p>
+    <hr>
+    <ul class="grid">
+      <li>
+        <i></i>
+        <h4></h4>
+        <p></p>
+      </li>
+      <li>
+        <i></i>
+        <h4></h4>
+        <p></p>
+      </li>
+      <li>
+        <i></i>
+        <h4></h4>
+        <p></p>
+      </li>
+      <li>
+        <i></i>
+        <h4></h4>
+        <p></p>
+      </li>
+
+      
+    </ul>
   </section>
 </body>
 </html>
