finish styling of main page footer and testimonials

--- a/index.html
+++ b/index.html
@@ -49,28 +49,58 @@
     <hr>
     <ul class="grid">
       <li>
-        <i></i>
-        <h4></h4>
-        <p></p>
+        <i class="fa fa-compass fa-4x"></i>
+        <h4>Walking Trips</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla alias beatae est, ipsam sunt iusto eligendi voluptatem quisquam! Eveniet ex quos aliquam molestias! Laboriosam nisi aspernatur dolore. A, mollitia quia.</p>
       </li>
       <li>
-        <i></i>
-        <h4></h4>
-        <p></p>
+        <i class="fa fa-camera-retro fa-4x"></i>
+        <h4>Photography Trips</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi ipsa vero eligendi vitae ullam quas dolor deserunt soluta voluptatem maiores totam quibusdam repudiandae accusamus quae, placeat officiis iure doloribus a.</p>
       </li>
       <li>
-        <i></i>
-        <h4></h4>
-        <p></p>
+        <i class="fa fa-bicycle fa-4x"></i>
+        <h4>Bicycle Trips</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi quisquam natus minima atque quam. Inventore eius explicabo obcaecati corrupti consequatur sapiente laborum similique nam quasi architecto, earum, autem, doloremque nostrum?</p>
       </li>
       <li>
-        <i></i>
-        <h4></h4>
-        <p></p>
+        <i class="fa fa-flag-checkered fa-4x"></i>
+        <h4>Racing Trips</h4>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos dolores, voluptates eum sunt placeat tenetur unde laborum nulla laudantium iure! Natus voluptatibus doloribus maiores odit esse excepturi, itaque blanditiis provident.</p>
       </li>
 
       
     </ul>
   </section>
+  <section class="testimonials">
+    <h3 class="title">Testimonials from happy adventurers:</h3>
+    <hr>
+    <p class="quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+    <p class="author">- Doug Brown</p>
+    <p class="quote">Quaerat impedit natus voluptate eius tempora, magni laboriosam.</p>
+    <p class="author">- Ben Steel</p>
+    <p class="quote">Similique dolore rem aperiam natus! Molestias dicta iusto dolores eveniet itaque perferendis cum magnam.</p>
+    <p class="author">- Betty Chook</p>
+  </section>
+
+  <section class="contact">
+    <h3 class="title">Contact Us</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, excepturi dolore! Eius nulla tempora nemo corrupti vero sed eos debitis nam! Atque quos veniam tempora molestias distinctio laborum voluptatibus quia!
+
+    </p>
+    <hr>
+    <form action="#">
+      <input type="email" placeholder="Your email">
+      <a href="#" class="btn">Subscribe</a>
+    </form>
+
+  </section>
+  <footer>
+    <p>adipisicing elit. Nostrum, excepturi dolore!</p>
+    <p>Nostrum, excepturi dolore! Eius nulla</p>
+    <ul class="li"><a href="#">Twitter</a></ul>
+    <ul class="li"><a href="#">Facebook</a></ul>
+    <ul class="li"><a href="#">Snapchat</a></ul>
+  </footer>
 </body>
 </html>
